--- a/estilo.css
+++ b/estilo.css
@@ -28,6 +28,7 @@ h1{
 }
 
 .link{
+    color:#2c552b;
     text-decoration: none;
 }
 
@@ -64,6 +65,8 @@ h3 {
     color: #2c552b;
 }
 
-/*@media screen {
-    max-width: 500em;
-}*/
+@media screen and (min-width:48.75em){
+    .header{
+        justify-content: space-between;
+    }
+}
